<resources>
    <string name="app_name">eBenzinska</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="credit_card_number">1111-2222-3333-4444</string>
    <string name="credit_card_month">Lipanj</string>
    <string name="credit_card_year">2021</string>
    <string name="credit_card_cvv">123</string>
    <string name="confirm_pay">Završi narudžbu</string>
    <string name="confirm_back">Odustani</string>
    <string name="prompt_firstname_lastname">Ime i prezime</string>
    <string name="prompt_lastname">Prezime</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Lozinka</string>
    <string name="login_main">Prijava</string>
    <string name="registration_main">Registracija</string>
    <string name="email_missing">Unesite valjanu email adresu!</string>
    <string name="password_missing">Unesite valjanu lozinku!</string>
    <string name="name_missing">Unesite valjano ime i prezime!</string>
    <string name="cd_number_missing">Unesite ispravan broj kartice!</string>
    <string name="cd_month_missing">Unesite ispravan mjesec isteka!</string>
    <string name="cd_year_missing">Unesite ispravnu godinu isteka!</string>
    <string name="cd_cvv_missing">Unesite ispravan cvv kod kartice!</string>
    <string name="action_sign_in">Prijavi se</string>
    <string name="action_register">Registiraj se</string>
    <string name="registration_complete">Registracija uspješna!</string>
    <string name="registration_error">Registracija neuspjela, email adresa u upotrebi!</string>
    <string name="login_complete">Prijava uspješna!</string>
    <string name="login_error">Prijava neuspjela, pokušajte ponovno!</string>
    <string name="delete_check">Jeste li sigurni da želite ukloniti ovaj artikl?</string>
    <string name="logout_check">Jeste li sigurni da se želite odjaviti?</string>
    <string name="price">Cijena: </string>
    <string name="addtocart">Dodaj </string>
    <string name="cart_total">Ukupno:</string>
    <string name="total">Ukupno</string>
    <string name="cart_placeorder">Potvrdi narudžbu</string>
    <string name="order_confirmed">Narudžba uspješno izvršena!</string>
    <string name="empty_cart">Vaša košarica je prazna!</string>
    <string name="added_to_cart">Dodano u košaricu</string>
    <string name="max_fuel_quantity">Maksimalna količina goriva je 300 litara!</string>
    <string name="fuel_quantity_empty">Niste unijeli željenu količinu goriva!</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="product_deleted">Artikl je uklonjen!</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="tab_text_1">Gorivo</string>
    <string name="tab_text_2">Hrana i piće</string>
    <string name="sorted_az">Poredano od A-Z </string>
    <string name="sorted_za">Poredano od Z-A </string>
    <string name="sorted_price_low">Cijena padajuća </string>
    <string name="sorted_price_high">Cijena rastuća </string>
    <string name="available_quantity">Dostupno samo</string>
    <string name="submit">Potvrdi</string>
    <string name="fuelquantity">Količina goriva:</string>
    <string name="fuelquantity2">Količina</string>
    <string name="fuellitres">litara</string>
    <string name="fuelmark">kn/l</string>
    <string name="pricetag">kn</string>
    <string name="quantity">Kol</string>
    <string name="cartproductname">Naziv</string>
    <string name="cartproductquantity">Količina</string>
    <string name="cartproductprice">Cijena</string>


</resources>