<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmOrder">

    <TextView
        android:id="@+id/totalpriceconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cart_total"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/confirmname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_firstname_lastname"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirmcreditcard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/credit_card_number"
        android:imeActionLabel="@string/action_register"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/confirmname" />

    <EditText
        android:id="@+id/confirmmonthexp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/credit_card_month"
        android:imeActionLabel="@string/action_register"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/confirmcreditcard" />

    <EditText
        android:id="@+id/confirmyearexp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/credit_card_year"
        android:imeActionLabel="@string/action_register"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/confirmmonthexp" />

    <EditText
        android:id="@+id/confirmcvv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/credit_card_cvv"
        android:imeActionLabel="@string/action_register"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/confirmyearexp" />


    <Button
        android:id="@+id/pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:text="@string/confirm_pay"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmcvv"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>