<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/gasstation"
        android:id="@+id/im1"
        android:scaleType="centerCrop"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textColor="@color/white"   
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/prijavabutton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/registracijabutton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/registration_main"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/prijavabutton"
        app:layout_constraintTop_toBottomOf="@+id/prijavabutton"
        android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>
