<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/purple_200">

        <TextView
            android:id="@+id/cartproductname"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/cartproductname"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/cartproductquantity"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:text="@string/cartproductquantity"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginRight="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/cartproductprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cartproductprice"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_below="@+id/cartproductquantity"
            android:gravity="center"
            android:layout_marginTop="10dp"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>