<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FuelActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/purple_200"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Gorivo"
        app:titleMarginStart="20dp"/>

    <ImageView
        android:src="@drawable/ic_fuel"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/myRecycler"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="210dp"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spFuel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="24dp"
        android:text="@string/fuelquantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spFuel" />

    <EditText
        android:id="@+id/fuelquantity"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/fuelquantity2"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spFuel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="24dp"
        android:text="@string/fuellitres"/>

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="24dp"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuelquantity" />-->

    <!--<TextView
        android:id="@+id/fueltotalprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"/>-->

    <Button
        android:id="@+id/fuelsubmit"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuelquantity"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNavView_Bar"
        app:itemBackground="@color/purple_200"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/bottom_navigation_menu"
        android:layout_alignParentBottom="true">


    </com.google.android.material.bottomnavigation.BottomNavigationView>
</RelativeLayout>
